switcher-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: switcher-api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: switcher-api
  template:
    metadata:
      labels:
        app: switcher-api
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - worker-0
      dnsPolicy: Default
      containers:
        - name: switcher-api
          image: trackerforce/switcher-api:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources: 
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: /check
              port: 3000
