switcher-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: switcher-api
  labels:
    app: switcher-api
spec:
  selector:
    app: switcher-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
